--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
-<body class="bg-black flex items-center justify-center min-h-screen">
+<body class=" flex items-center justify-center min-h-screen bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%">
   
-  <div class="w-full max-w-md p-6 bg-white rounded-lg shadow-md">
-    <h1 class="text-center text-7xl font-bold text-green-500 mb-4" style="font-family: 'Caveat', cursive;">
+  <div class="w-full max-w-sm p-4 bg-white rounded-lg shadow-md ">
+    <h1 class="text-center text-5xl font-bold text-black-100 mb-3" style="font-family: 'Caveat', cursive;">
       Todo List
     </h1>
 
-    <div class="flex items-center border border-gray-300 rounded-lg overflow-hidden mb-5">
-      <input type="text" id="taskInput" placeholder="Add item..." class="flex-grow px-4 py-2 text-gray-700 outline-none" />
-      <button id="addTaskButton" type="button" class="bg-green-500 text-white px-4 py-2 hover:bg-green-600">
+    <div class="flex items-center border border-gray-300 rounded-lg overflow-hidden mb-4">
+      <input type="text" id="taskInput" placeholder="Add item..." class="flex-grow px-3 py-1.5 text-gray-700 outline-none text-sm" />
+      <button id="addTaskButton" type="button" class="bg-black text-white px-3 py-1.5 hover:bg-gray-800 text-sm">
         <i class="fas fa-plus"></i>
       </button>
+      
     </div>
 
-    <ul id="taskList" class="space-y-2"></ul>
+    <ul id="taskList" class="space-y-1"></ul>
   </div>
 
   <script src="script.js"></script>
